k8s-config/django/prod/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-applikasjon
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-applikasjon
        image: sjohans1/django-bachelor:3.0
        ports:
        - containerPort: 8000
