k8s-config/django/prod/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: django.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-entrypoint
                port:
                  number: 8000
